--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "redis_client"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
@@ -12,12 +12,15 @@ actix-files = "0.6.6"
 actix-multipart = "0.7.2"
 tera = "1.15"
 
-serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
+serde = { version = "1.0.215", features = ["derive"] }
 tokio = { version = "1.41.1", features = ["full"] }
 
+utoipa = { version = "5.2.0" }
+utoipa-actix-web = { version = "0.1.2" }
+utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"] }
+
 [dev-dependencies]
-serde_json = "1.0.132"
 actix-rt = "2.10.0"
 actix-multipart-test = "0.0.3"
 
