--- a/.env
+++ b/.env
@@ -1,11 +1,17 @@
-# Redis
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_POOL_CONNECTION=100
-
 # App
 APP_PORT=8080
 WORKERS=100
 MULTIPART_TOTAL_LIMIT=2
 MULTIPART_MEMORY_LIMIT=100
 REQUEST_TIMEOUT_SEC=60
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_POOL_CONNECTION=100
+
+# Grafana
+GRAFANA_PORT=3000
+
+# Prometheuse
+PROMETHEUSE_PORT=9090
