--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,5 +1,7 @@
-scrape_config:
+global:
+  scrape_interval: 5s
+
+scrape_configs:
   - job_name: 'redis-client'
-    scrape_interval: 5s
     static_configs:
-      - targets: ['redis_client:8080']
+      - targets: ['redis-client-rust:8080']
