refactoring: upload dump multiplication to byte

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,8 +44,7 @@ services:
       - REDIS_PORT=${REDIS_PORT}
       - REDIS_POOL_CONNECTION=${REDIS_POOL_CONNECTION}
       - WORKERS=${WORKERS}
-      - MULTIPART_TOTAL_LIMIT=${MULTIPART_TOTAL_LIMIT}
-      - MULTIPART_MEMORY_LIMIT=${MULTIPART_MEMORY_LIMIT}
+      - PLAYLOAD_LIMIT=${PLAYLOAD_LIMIT}
       - REQUEST_TIMEOUT_SEC=${REQUEST_TIMEOUT_SEC}
     ports:
       - "${APP_PORT}:8080"
